syntax = "proto3";
package network;
option go_package="./;network";
message conn_address{
  string ip   = 1;
  uint32 port = 2;
}


message Request{
  enum type{
    command = 0;
    file    = 1;
  }

  conn_address from = 1;
  conn_address to   = 2;
  type  _type = 3;
  uint64 timestamp = 4;
  oneof pyload {
    CommandRequest commandRequest = 5;
    FileRequest fileRequest = 6;
  }
}

message CommandRequest{
  int32 shellId     = 1;
  string command    = 2;
}

message FileRequest{
  enum type{
    upload = 0;
    download = 1;
  }
  int32 shellId     = 1;
  string filename   = 2;
  type _type  = 3;
}


message Response{
  enum state{
    success = 0;
    error   = 1;
  }
  state stateCode = 1;
  conn_address from = 2;
  conn_address to   = 3;
  string  msg = 4;
  uint64 timestamp = 5;
}
